--- a/bash/PKGBUILD
+++ b/bash/PKGBUILD
@@ -12,13 +12,15 @@ arch=('i686' 'x86_64')
 license=('GPL')
 url="https://www.gnu.org/software/bash/bash.html"
 validpgpkeys=('7C0135FB088AAF6C66C650B9BB5869F064EA74AB') # Chet Ramey
-makedepends=('gettext-devel' 'libreadline-devel>=7.0' 'ncurses-devel' 'autotools' 'gcc')
+makedepends=('gettext-devel' 'libreadline-devel>=7.0' 'ncurses-devel' 'autotools' 'gcc'
+             "mingw-w64-$(uname -m)-cv2pdb")
 source=(https://ftp.gnu.org/gnu/bash/bash-${_basever}.tar.gz{,.sig}
         0001-bash-4.4-cygwin.patch
         0002-bash-4.3-msysize.patch
         0005-bash-4.3-msys2-fix-lineendings.patch
         0006-bash-4.3-add-pwd-W-option.patch
-        0007-fix-static-build.patch)
+        0007-fix-static-build.patch
+        0008-Generate-a-.pdb-file-too.patch)
 if [ $_patchlevel -gt 000 ]; then
   for (( p=1; p<=$((10#${_patchlevel})); p++ )); do
     source=(${source[@]} https://ftp.gnu.org/gnu/bash/bash-${_basever}-patches/bash${_basever//./}-$(printf "%03d" $p){,.sig})
@@ -45,6 +47,7 @@ prepare() {
   patch -p1 -i ${srcdir}/0005-bash-4.3-msys2-fix-lineendings.patch
   patch -p1 -i ${srcdir}/0006-bash-4.3-add-pwd-W-option.patch
   patch -p1 -i ${srcdir}/0007-fix-static-build.patch
+  patch -p1 -i ${srcdir}/0008-Generate-a-.pdb-file-too.patch
 
   autoconf
 }
@@ -112,8 +115,9 @@ package_bash-devel() {
  options=('staticlibs')
  backup=()
 
- mkdir -p ${pkgdir}/usr/{include,lib}
+ mkdir -p ${pkgdir}/usr/{include,lib,bin}
  cd ${srcdir}/bash-$_basever
+ cp -f bash.pdb ${pkgdir}/usr/bin/
  cp -f libbash.dll.a ${pkgdir}/usr/lib/
 
  mkdir -p  ${pkgdir}/usr/include/bash
@@ -130,6 +134,7 @@ sha256sums=('cc012bc860406dcf42f64431bcd3d2fa7560c02915a601aba9cd597a39329baa'
             'c866eeb043090c13ab2ce6777ca6a24b31929fb58c4a6a221bca541fcc5d9949'
             '9ef0a4686385a36c7a094ea8f5e9e973ee427c868952b2778f2f659347f74b32'
             '82578a38798bfcfd85707c08e4f7b22c3fa7acc7a01d083faf86eb923511d60e'
+            'cb37088b6db6abf04259ff4f777b3c467a8ad48a3f46bcecb5c508e3c8f0b8cf'
             'ebb07b3dbadd98598f078125d0ae0d699295978a5cdaef6282fe19adef45b5fa'
             'SKIP'
             '15ea6121a801e48e658ceee712ea9b88d4ded022046a6147550790caf04f5dbe'
