--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,6 +13,9 @@ on:
       build_only:
         description: 'Skip deployment (if non-empty)'
         required: false
+      debug_with_ssh_key:
+        description: 'Public SSH key to use to debug failures'
+        required: false
 
 env:
   PACKAGE_TO_BUILD: "${{github.event.inputs.package}}"
@@ -136,6 +139,31 @@ jobs:
           FALLBACK_ARCHITECTURE: ${{github.event.inputs.architecture}}
           PACMANDRYRUN: ${{github.event.inputs.build_only}}
         run: /usr/src/build-extra/pacman-helper.sh quick_add artifacts/*
+      - name: Debug using tmate
+        if: failure() && github.event.inputs.debug_with_ssh_key != ''
+        shell: bash
+        run: |
+          # Install tmate
+          pacman -Sy --noconfirm tmate openssh &&
+
+          # Restrict SSH access to the "actor", i.e. the GitHub user who triggered this workflow
+          mkdir -p ~/.ssh &&
+          echo '${{github.event.inputs.debug_with_ssh_key}}' >~/.ssh/authorized_keys &&
+
+          # Generate an SSH key (needed for tmate)
+          echo -e 'y\n' | ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa &&
+
+          # Start tmate session
+          export CHERE_INVOKING=1 &&
+          tmate -S /tmp/tmate.sock -a ~/.ssh/authorized_keys new-session -d &&
+          tmate -S /tmp/tmate.sock wait tmate-ready &&
+
+          # Print SSH invocation every 5 seconds, until tmate session has terminated
+          while test -e /tmp/tmate.sock
+          do
+            tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}'
+            sleep 5
+          done
       - name: Clean up temporary files
         if: always()
         shell: bash
