build-and-deploy: actually specify a keyserver...
Without it, the command should have failed, but apparently was content
with an invalid key server (because it mistook the key for being the URL
to use) because there was no key to fetch (because the key argument was
already used as argument for --keyserver).

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -79,7 +79,7 @@ jobs:
           . PKGBUILD &&
           for key in "${validpgpkeys[@]}" 57759F748D223F034D8BE870BB3AA74136C569BB
           do
-            gpg $GPG_OPTIONS --recv-keys --batch --yes --keyserver "$key" &&
+            gpg $GPG_OPTIONS --recv-keys --batch --yes --keyserver hkp://keyserver.ubuntu.com "$key" &&
             echo "$key:6:" | gpg $GPG_OPTIONS --import-ownertrust ||
             exit 1
           done
