less: synchronize with MSYS2's version
This replaces our version with the one from 5762fe36d1 (less: update to
590, 2021-07-20), in preparation for building and uploading an i686
version of the package (MSYS2 no longer builds i686 versions of their
MSYS packages).

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/less/PKGBUILD
+++ b/less/PKGBUILD
@@ -1,18 +1,20 @@
 # Maintainer: Alexey Pavlov <alexpux@gmail.com>
 
 pkgname=less
-pkgver=530
+pkgver=590
 pkgrel=1
 pkgdesc="A terminal based program for viewing text files"
 license=('GPL3')
 arch=('i686' 'x86_64')
 url="http://www.greenwoodsoftware.com/less"
-groups=('base')
 depends=('ncurses' 'libpcre')
 makedepends=('ncurses-devel' 'pcre-devel')
-source=(http://www.greenwoodsoftware.com/${pkgname}/${pkgname}-${pkgver}{.tar.gz,.sig})
-sha256sums=('503f91ab0af4846f34f0444ab71c4b286123f0044a4964f1ae781486c617f2e2'
-            'SKIP')
+source=("http://www.greenwoodsoftware.com/${pkgname}/${pkgname}-${pkgver}.tar.gz")
+# pgp check still fails with FAILED (unknown public key F153A7C833235259)
+#        "$pkgname-$pkgver.tar.gz.sig::http://www.greenwoodsoftware.com/$pkgname/$pkgname-$pkgver.sig")
+sha256sums=('6aadf54be8bf57d0e2999a3c5d67b1de63808bb90deb8f77b028eafae3a08e10')
+#            'SKIP')
+validpgpkeys=('AE27252BD6846E7D6EAE1DD6F153A7C833235259') # Mark Nudelman
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
