--- a/.github/workflows/sync-with-upstream.yml
+++ b/.github/workflows/sync-with-upstream.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: ${{ matrix.package }}
+          branch: ${{ matrix.package }}-$msys_pkgver-$msys_pkgrel
           title: "${{ matrix.package }}: sync with upstream"
           body: Update ${{ matrix.package }} to MSYS2's version.
           commit-message: "${{ matrix.package }}: synchronize with MSYS2's version"
