msys2-runtime: optionally code-sign .exe/.dll files
If the environment variable `SIGNTOOL` is defined, interpret it as the
command to use to code-sign these files.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/msys2-runtime/PKGBUILD
+++ b/msys2-runtime/PKGBUILD
@@ -262,6 +262,14 @@ build() {
     --sysconfdir=/etc \
     "${extra_config[@]}"
   LC_ALL=C make
+
+  if test -n "$SIGNTOOL"
+  then
+    eval "$SIGNTOOL" \
+      ${PWD}/${CHOST}/winsup/cygwin/msys0.dll \
+      ${PWD}/${CHOST}/winsup/utils/*.exe
+  fi
+
   LC_ALL=C make -j1 DESTDIR="${srcdir}"/dest install
 
   #pushd ${CHOST}/winsup/cygwin > /dev/null
