bash: optionally code-sign the executable
If the environment variable `SIGNTOOL` is defined, interpret it as the
command to use to code-sign these files.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/bash/PKGBUILD
+++ b/bash/PKGBUILD
@@ -78,6 +78,9 @@ build() {
        HISTORY_LDFLAGS= \
        READLINE_LDFLAGS= \
        LOCAL_LDFLAGS='-Wl,--export-all,--out-implib,lib$(@:.exe=.dll.a)'
+
+  test -z "$SIGNTOOL" ||
+  eval "$SIGNTOOL" bash.exe
 }
 
 check() {
