msys2-runtime: do not forget the MINGW executables when code-signing
In e03b45ad70 (msys2-runtime: optionally code-sign .exe/.dll files,
2022-01-13), we started to code-sign the `.dll` and `.exe` files when
the environment variable `SIGNTOOL` is set.

But we forgot the MINGW tools (such as `strace.exe`). Let's include
them in the code-signing part.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/msys2-runtime/PKGBUILD
+++ b/msys2-runtime/PKGBUILD
@@ -276,7 +276,7 @@ build() {
   then
     eval "$SIGNTOOL" \
       ${PWD}/${CHOST}/winsup/cygwin/msys0.dll \
-      ${PWD}/${CHOST}/winsup/utils/*.exe
+      ${PWD}/${CHOST}/winsup/utils/*.exe ${PWD}/${CHOST}/winsup/utils/mingw/*.exe
   fi
 
   LC_ALL=C make -j1 DESTDIR="${srcdir}"/dest install
