bash: help the signtool find the bash
We typically use `git signtool` as the signtool, which is an alias, and
due to Git's mechanics switches the current working directory to the
top-level of the enclosing Git repository. Let's use absolute paths
instead of relative ones for that reason.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/bash/PKGBUILD
+++ b/bash/PKGBUILD
@@ -80,7 +80,7 @@ build() {
        LOCAL_LDFLAGS='-Wl,--export-all,--out-implib,lib$(@:.exe=.dll.a)'
 
   test -z "$SIGNTOOL" ||
-  eval "$SIGNTOOL" bash.exe
+  eval "$SIGNTOOL" "$PWD/bash.exe"
 }
 
 check() {
