gnutls(i686): make sure to use the `msys-` prefix
Since MSYS2 no longer maintains an i686 flavor, Git for Windows' i686
SDK is getting increasingly out of sync. One symptom is that the GNUTLS
library was built using the `cyg` prefix instead of the `msys-` one.
This broke `dirmngr` by essentially removing the DLL it relies on.
Again.

Let's work around this by copying the version of `libtool` that we know
works, and be done with it. For now.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/gnutls/PKGBUILD
+++ b/gnutls/PKGBUILD
@@ -51,6 +51,9 @@ build() {
     --enable-heartbeat-support \
     --with-default-trust-store-file=/usr/ssl/certs/ca-bundle.crt
 
+  # Ensure the `msys-` prefix
+  case "$CARCH" in i686) cp /usr/bin/libtool ./;; esac
+
   make
   make DESTDIR="${srcdir}/dest" install
   rm ${srcdir}/dest/usr/share/info/dir
