bash: avoid stripping after code-signing
For some reason, if we run `osslsigncode` on the executable and _then_
`strip`, the result seems to get so corrupted that `osslsigncode verify`
itself is unable to verify the result (although the executable seems to
_run_ fine, still).

Let's just avoid this problem by forcing the `strip` part to come before
code-signing.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/bash/PKGBUILD
+++ b/bash/PKGBUILD
@@ -80,8 +80,11 @@ build() {
        READLINE_LDFLAGS= \
        LOCAL_LDFLAGS='-Wl,--export-all,--out-implib,lib$(@:.exe=.dll.a)'
 
-  test -z "$SIGNTOOL" ||
-  eval "$SIGNTOOL" "$PWD/bash.exe"
+  test -z "$SIGNTOOL" || {
+    # first strip, then code-sign, otherwise the .exe becomes corrupt somehow
+    strip bash.exe &&
+    eval "$SIGNTOOL" "$PWD/bash.exe"
+  }
 }
 
 check() {
@@ -90,6 +93,9 @@ check() {
 }
 
 package_bash() {
+  # stripping after code-signing somehow corrupts the exe
+  test -z "$SIGNTOOL" || options=('!strip')
+
   provides=('sh')
   #install=bash.install
 
