--- a/tig/PKGBUILD
+++ b/tig/PKGBUILD
@@ -2,10 +2,10 @@
 
 pkgname=tig
 pkgver=2.5.5
-pkgrel=1
+pkgrel=2
 pkgdesc='Text-mode interface for Git'
-depends=('git' 'libreadline' 'ncurses')
-makedepends=('asciidoc' 'xmlto' 'libreadline-devel' 'ncurses-devel' 'libiconv-devel')
+depends=('git' 'libreadline' 'ncurses' 'libpcre' 'libpcreposix')
+makedepends=('asciidoc' 'xmlto' 'libreadline-devel' 'ncurses-devel' 'libiconv-devel' 'pcre-devel')
 url='http://jonas.nitro.dk/tig/'
 license=('GPL')
 arch=('i686' 'x86_64')
