tig: add PCRE2 support
This addresses https://github.com/git-for-windows/git/issues/3889.

[js: downgraded pkgrel because Git for Windows' automation wants to do
that itself.]

Signed-off-by: Matthias Aßhauer <mha1993@live.de>
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/tig/PKGBUILD
+++ b/tig/PKGBUILD
@@ -4,8 +4,8 @@ pkgname=tig
 pkgver=2.5.5
 pkgrel=1
 pkgdesc='Text-mode interface for Git'
-depends=('git' 'libreadline' 'ncurses')
-makedepends=('asciidoc' 'xmlto' 'libreadline-devel' 'ncurses-devel' 'libiconv-devel')
+depends=('git' 'libreadline' 'ncurses' 'libpcre2_8' 'libpcre2posix')
+makedepends=('asciidoc' 'xmlto' 'libreadline-devel' 'ncurses-devel' 'libiconv-devel' 'pcre2-devel')
 url='http://jonas.nitro.dk/tig/'
 license=('GPL')
 arch=('i686' 'x86_64')
