build-and-deploy: fix 32-bit builds
The default location of the full 32-bit Git for Windows SDK has changed
from `C:\git-sdk-32-full-sdk` to `C:\git-sdk-32`.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -45,6 +45,7 @@ jobs:
           flavor: full
           architecture: ${{env.ARCHITECTURE}}
           msys: true
+          path: C:\git-sdk-32
       - name: Clone MSYS2-packages
         shell: bash
         env:
@@ -59,7 +60,7 @@ jobs:
         if: env.ARCHITECTURE == 'i686' && !contains('msys2-runtime gnupg', env.PACKAGE_TO_BUILD)
         shell: powershell
         run: |
-          cd C:\git-sdk-32-full-sdk
+          cd C:\git-sdk-32
           if (!$?) { exit(1); }
 
           $env:PATH += ";$(Get-Location)"
