--- a/libcbor/PKGBUILD
+++ b/libcbor/PKGBUILD
@@ -1,45 +1,40 @@
 # Contributer: Reza Tavakoli <rta.0070@gmail.com>
 
-pkgbase="libcbor"
+pkgbase=libcbor
 pkgname=("${pkgbase}" "${pkgbase}-devel")
-pkgver=0.8.0
-pkgrel=1
+pkgver=0.9.0
+pkgrel=0
 pkgdesc="A C library for parsing and generating CBOR, a general-purpose schema-less binary data format"
 arch=('i686' 'x86_64')
 url="https://github.com/PJK/libcbor"
 license=('MIT')
 makedepends=("cmake" "make" "gcc")
-source=(${pkgbase}-${pkgver}.tar.gz::"$url/archive/v${pkgver}.tar.gz")
-sha256sums=('618097166ea4a54499646998ccaa949a5816e6a665cf1d6df383690895217c8b')
-
-prepare() {
-  cd "${srcdir}/${pkgbase}-${pkgver}"
-}
+source=(https://github.com/PJK/libcbor/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
+sha256sums=('da81e4f9333e0086d4e2745183c7052f04ecc4dbcffcf910029df24f103c15d1')
 
 build() {
-  mkdir -p "${srcdir}/${pkgbase}-${pkgver}/build-${CARCH}"
-  cd "${srcdir}/${pkgbase}-${pkgver}/build-${CARCH}"
-
-  cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr -DCBOR_CUSTOM_ALLOC=ON -DBUILD_SHARED_LIBS=1 ..
-
-  make
-  make DESTDIR=${srcdir}/dest install
+  cd ${pkgname}-${pkgver}
+  cmake . \
+    -Bbuild \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCBOR_CUSTOM_ALLOC=ON \
+    -DBUILD_SHARED_LIBS=ON 
+  cmake --build build
+  DESTDIR="${srcdir}/dest" cmake --install build
 }
 
 package_libcbor() {
   groups=("libraries")
-  cd "${srcdir}/dest"
   mkdir -p ${pkgdir}/usr/bin
-  cp usr/bin/*.dll ${pkgdir}/usr/bin/
+  cp -f ${srcdir}/dest/usr/bin/*.dll ${pkgdir}/usr/bin/
 }
 
 package_libcbor-devel() {
   pkgdesc="Development headers and library for libcbor"
   depends=("$pkgbase=$pkgver")
   groups=("development")
-  cd "${srcdir}/dest"
   mkdir -p ${pkgdir}/usr/lib
-  mkdir -p ${pkgdir}/usr/include
-  cp -rf usr/lib/* ${pkgdir}/usr/lib
-  cp -rf usr/include/* ${pkgdir}/usr/include
+  cp -rf ${srcdir}/dest/usr/include ${pkgdir}/usr
+  cp -rf ${srcdir}/dest/usr/lib ${pkgdir}/usr
 }
