--- a/libfido2/PKGBUILD
+++ b/libfido2/PKGBUILD
@@ -1,55 +1,75 @@
-# Contributer: Reza Tavakoli <rta.0070@gmail.com>
+# Contributor: Karol Babioch <karol@babioch.de>
 
-pkgbase="libfido2"
-pkgname=("${pkgbase}" "${pkgbase}-devel")
-pkgver=1.5.0
-pkgrel=1
-pkgdesc="libfido2 provides library functionality and command-line tools to communicate with a FIDO device over USB, and to verify attestation and assertion signatures."
+pkgbase=libfido2
+pkgname=("${pkgbase}" "fido2-tools" "${pkgbase}-devel" "${pkgbase}-docs")
+pkgver=1.12.0
+pkgrel=0
+pkgdesc="Library functionality for FIDO 2.0, including communication with a device over USB"
 arch=('i686' 'x86_64')
-url="https://github.com/Yubico/libfido2"
+url="https://developers.yubico.com/libfido2/"
 license=('BSD-2-Clause')
 depends=("libcbor" "openssl")
 makedepends=("libcbor-devel" "openssl-devel" "cmake" "make" "gcc")
-source=(${pkgbase}-${pkgver}.tar.gz::"$url/archive/${pkgver}.tar.gz"
-        0001-msys-fixes.patch)
-sha256sums=('5990f923c9390fe1e6a00ba5d1d1f74030e7344b855e971d9fb7223e70ff3122'
-            '4f439f11f599583584a55050084e768f10e7c710d2f078982adf4154aae9418b')
+source=("https://developers.yubico.com/libfido2/Releases/libfido2-${pkgver}.tar.gz"{,.sig}
+        msys2-fix-ln.diff)
+sha256sums=('813d6d25116143d16d2e96791718a74825da16b774a8d093d96f06ae1730d9c5'
+            'SKIP'
+            '3134757a26e80eb1917036d4402551fa517e4e0e678c54dcf6c166b714de2bf2')
+# https://developers.yubico.com/Software_Projects/Software_Signing.html
+validpgpkeys=(
+  '1D7308B0055F5AEF36944A8F27A9C24D9588EA0F' # Aveen Ismail <aveen.ismail@yubico.com>
+  '7FBB6186957496D58C751AC20E777DD85755AA4A' # Konstantinos Georgantas <kostas@yubico.com>
+  '78D997D53E9C0A2A205392ED14A19784723C9988' # Ludvig Michaelsson <ludvig.michaelsson@yubico.com>
+)
 
 prepare() {
-  cd "${srcdir}/${pkgbase}-${pkgver}"
-  patch -p1 -i ${srcdir}/0001-msys-fixes.patch
+  cd ${pkgname}-${pkgver}
+  patch -p1 -i ${srcdir}/msys2-fix-ln.diff
 }
 
 build() {
-  mkdir -p "${srcdir}/${pkgbase}-${pkgver}/build-${CARCH}"
-  cd "${srcdir}/${pkgbase}-${pkgver}/build-${CARCH}"
-
-  #cmake files are changing rapidly on this project, careful when upgrading
-  cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr ..
-
-  make
-  make DESTDIR=${srcdir}/dest install
+  cd ${pkgname}-${pkgver}
+  cmake -B build \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DUSE_WINHELLO=ON
+  cmake --build build
+  DESTDIR="${srcdir}/dest" cmake --install build
 }
 
 package_libfido2() {
   groups=("libraries")
-  cd "${srcdir}/dest"
+
   mkdir -p ${pkgdir}/usr/bin
-  mkdir -p ${pkgdir}/usr/share/man/man1
-  cp usr/lib/*.dll ${pkgdir}/usr/bin/
-  cp usr/bin/*.exe ${pkgdir}/usr/bin/
-  cp -rf usr/share/man/man1/* ${pkgdir}/usr/share/man/man1
+  cp -f ${srcdir}/dest/usr/bin/*.dll ${pkgdir}/usr/bin/
+}
+
+package_fido2-tools() {
+  pkgdesc="FIDO2 command line tools to access and configure a FIDO2 compliant authentication device"
+  depends=("$pkgbase=$pkgver")
+
+  mkdir -p ${pkgdir}/usr/bin
+  cp -f ${srcdir}/dest/usr/bin/*.exe ${pkgdir}/usr/bin/
+  mkdir -p ${pkgdir}/usr/share/man
+  cp -rf ${srcdir}/dest/usr/share/man/man1 ${pkgdir}/usr/share/man
 }
 
 package_libfido2-devel() {
   pkgdesc="Development headers and library for libfido2"
   depends=("$pkgbase=$pkgver")
   groups=("development")
-  cd "${srcdir}/dest"
+
   mkdir -p ${pkgdir}/usr/lib
-  mkdir -p ${pkgdir}/usr/include
-  mkdir -p ${pkgdir}/usr/share/man/man3
-  cp -rf usr/lib/*.a ${pkgdir}/usr/lib
-  cp -rf usr/include/* ${pkgdir}/usr/include
-  cp -rf usr/share/man/man3/* ${pkgdir}/usr/share/man/man3
+  cp -rf ${srcdir}/dest/usr/include ${pkgdir}/usr/
+  cp -rf ${srcdir}/dest/usr/lib/pkgconfig ${pkgdir}/usr/lib/ 
+  cp -f ${srcdir}/dest/usr/lib/*.a ${pkgdir}/usr/lib
 }
+
+package_libfido2-docs() {
+  pkgdesc="Documentation for libfido2"
+  depends=("libfido2-devel=$pkgver")  
+
+  mkdir -p ${pkgdir}/usr/share/man
+  cp -rf ${srcdir}/dest/usr/share/man/man3 ${pkgdir}/usr/share/man
+}
+
