--- a/bash/PKGBUILD
+++ b/bash/PKGBUILD
@@ -12,10 +12,16 @@ arch=('i686' 'x86_64')
 license=('GPL')
 url="https://www.gnu.org/software/bash/bash.html"
 validpgpkeys=('7C0135FB088AAF6C66C650B9BB5869F064EA74AB') # Chet Ramey
-makedepends=('gettext-devel' 'libreadline-devel>=7.0' 'ncurses-devel' 'gcc')
+makedepends=('gettext-devel' 'ncurses-devel' 'gcc')
 if [ "${CARCH}" == 'x86_64' ]; then
 	# Git for Windows' i686-bit SDK does not have the `autotools` package
-	makedepends+=('autotools')
+	# and it only has a too-old libreadline
+	makedepends+=('libreadline-devel>=7.0' 'autotools')
+	installed_readline=--with-installed-readline
+	READLINE_LDFLAGS=READLINE_LDFLAGS=
+else
+	installed_readline="--without-installed-readline --with-included-readline"
+	READLINE_LDFLAGS=
 fi
 source=(https://ftp.gnu.org/gnu/bash/bash-${_basever}.tar.gz{,.sig}
         0001-bash-4.4-cygwin.patch
@@ -64,7 +70,7 @@ build() {
     --enable-readline \
     --without-libintl-prefix \
     --without-libiconv-prefix \
-    --with-installed-readline \
+    $installed_readline \
     --without-bash-malloc \
     --with-curses \
     bash_cv_dev_stdin=present \
@@ -77,7 +83,7 @@ build() {
   # CFLAGS+=" -D_STATIC_BUILD"
   make CPPFLAGS=-DWORDEXP_OPTION \
        HISTORY_LDFLAGS= \
-       READLINE_LDFLAGS= \
+       $READLINE_LDFLAGS \
        LOCAL_LDFLAGS='-Wl,--export-all,--out-implib,lib$(@:.exe=.dll.a)'
 
   test -z "$SIGNTOOL" || {
