--- a/bash/PKGBUILD
+++ b/bash/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=bash
 pkgname=('bash' 'bash-devel')
 _basever=5.2
-_patchlevel=009 #prepare for some patches
+_patchlevel=012 #prepare for some patches
 pkgver=${_basever}.${_patchlevel}
 pkgrel=1
 pkgdesc="The GNU Bourne Again shell"
@@ -166,4 +166,10 @@ sha256sums=('a139c166df7ff4471c5e0733051642ee5556c1cc8a4a78f145583c5c81ab32fb'
             '6b4bd92fd0099d1bab436b941875e99e0cb3c320997587182d6267af1844b1e8'
             'SKIP'
             'f95a817882eaeb0cb78bce82859a86bbb297a308ced730ebe449cd504211d3cd'
+            'SKIP'
+            'c7705e029f752507310ecd7270aef437e8043a9959e4d0c6065a82517996c1cd'
+            'SKIP'
+            '831b5f25bf3e88625f3ab315043be7498907c551f86041fa3b914123d79eb6f4'
+            'SKIP'
+            '2fb107ce1fb8e93f36997c8b0b2743fc1ca98a454c7cc5a3fcabec533f67d42c'
             'SKIP')
