build-and-deploy: use a nicer display name
The `run-name` feature was recently shipped for that purpose:
https://github.blog/changelog/2022-09-26-github-actions-dynamic-names-for-workflow-runs/

This will make it easier to discern between i686 and x86_64 flavors of
"branch-deployed" packages (i.e. in workflow runs that build and publish
packages from PR branches in preparation for merging the PRs).

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,5 @@
 name: build-and-deploy
+run-name: Build${{ inputs.build_only == '' && ' and deploy' || '' }} ${{ inputs.package }} (${{ inputs.architecture }})
 
 on:
   workflow_dispatch:
