--- a/pcre2/PKGBUILD
+++ b/pcre2/PKGBUILD
@@ -18,6 +18,7 @@ sha256sums=('8d36cd8cb6ea2a4c2bb358ff6411b0c788633a2a45dabbf1aeb4b701d1b5e840'
             'f1d83ee9cdb5b6885b51fdcae7285edf6078391240db458ba3032fcdcec20260'
             'f6550e4ba5b26c404e956a55e371aa9a498972aa6a70ace4f8775f30c26f626b'
             'df4f6b1e63e33930076733906e70d754e4bba52e4b81bb2237ba7658d0bc1587')
+validpgpkeys=('45F68D54BBE23FB3039B46E59766E084FB0F43D8') # Philip Hazel <ph10@hermes.cam.ac.uk>
 
 prepare() {
   cd "${srcdir}"/${pkgname}-${pkgver}
