zlib: align with MSYS2
To allow Git for Windows to build corresponding i686 packages, let's
synchronize with the package definition in MSYS2.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/zlib/PKGBUILD
+++ b/zlib/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Alexey Pavlov <Alexpux@gmail.com>
 
 pkgname=('zlib' 'zlib-devel')
-pkgver=1.2.11
+pkgver=1.2.13
 pkgrel=1
 pkgdesc='Compression library implementing the deflate compression method found in gzip and PKZIP'
 arch=('i686' 'x86_64')
@@ -9,33 +9,50 @@ groups=('libraries')
 license=('custom')
 url="https://www.zlib.net/"
 makedepends=('gcc' 'make')
-source=(#"https://zlib.net/current/zlib-${pkgver}.tar.gz"
-        "https://sourceforge.net/projects/libpng/files/zlib/${pkgver}/zlib-${pkgver}.tar.gz"
-        1.2.7-minizip-cygwin.patch
-        1.2.7-zlib-symbols.patch
-        1.2.11-cygwin-no-widechar.patch
-        zlib-1.2.11-msys2.patch)
-sha256sums=('c3e5e9fdd5004dcb542feda5ee4f0ff0744628baf8ed2dd5d66f8ca1197cb1a1'
-            '425e2e36e8c788f0fa725c9b713642d5ae2f6629eab8613a2c2886eed2de5c21'
-            '16e9ce18df14a700dda0572843cdb42b5cb3d398c64706af0acc7cd77c181b7e'
-            'ba195803acf87b49b2f007bc83015c138a19e666e1e935b8116b4928b88d72eb'
-            '31d675180f528af0b172bbf09f1e9b2014acc1a0a8a23e0cc172a88eb3eb675f')
+source=("https://github.com/madler/zlib/releases/download/v${pkgver}/zlib-${pkgver}.tar.gz"
+        zlib-1.2.13-configure.patch
+        zlib-1.2.13-gzopen_w.patch
+        zlib-1.2.13-minizip-fixuncrypt.patch)
+sha256sums=('b3a24de97a8fdbc835b9833169501030b8977031bcb54b3b3ac13740f846ab30'
+            '43726a2170b298059391c0faec0c893aa7ca59b1201afd9f807c49d39ce25527'
+            '3c5186940741cf380ab598362c564c792965e9d25906ef75087e9e7389becbc5'
+            '3022d46bd933076cff754d8247eb12125cf72e4dbecdb8e90805cbe5393bd0b7')
+if [ "${CARCH}" == 'x86_64' ]; then
+       # Git for Windows' i686-bit SDK does not have the `autotools` package
+       makedepends+=('autotools')
+fi
 
 prepare() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  grep -A 24 '^  Copyright' zlib.h > LICENSE
 
-  patch -p2 -i ${srcdir}/1.2.7-minizip-cygwin.patch
-  patch -p2 -i ${srcdir}/1.2.7-zlib-symbols.patch
-  patch -p1 -i ${srcdir}/1.2.11-cygwin-no-widechar.patch
-  patch -p1 -i ${srcdir}/zlib-1.2.11-msys2.patch
+  patch -p2 -i ${srcdir}/zlib-1.2.13-configure.patch
+  patch -p2 -i ${srcdir}/zlib-1.2.13-gzopen_w.patch
+  patch -p2 -i ${srcdir}/zlib-1.2.13-minizip-fixuncrypt.patch
 }
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
+
+  # configure doesn't really work.. but leave it here in case things improve
+  export MSYSTEM=CYGWIN
+  export CHOST="${CHOST/-msys/-cygwin}"
   ./configure --prefix=/usr
-  make
-  make install DESTDIR="${srcdir}/dest"
+
+  # Instead we use some "other" makefile
+  make -j1 -f win32/Makefile.gcc \
+    CFLAGS="${CFLAGS}" \
+    SHAREDLIB=msys-z.dll
+
+  make -f win32/Makefile.gcc install \
+    DESTDIR="${srcdir}/dest" \
+    SHAREDLIB=msys-z.dll \
+    BINARY_PATH=/usr/bin \
+    INCLUDE_PATH=/usr/include \
+    LIBRARY_PATH=/usr/lib \
+    prefix=/usr \
+    SHARED_MODE=1
+
+  install -D zlib.3 "${srcdir}/dest/usr/share/man/man3/zlib.3"
 }
 
 check() {
